plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.5'
//	id 'jacoco'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.0"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.hibernate:hibernate-core:6.0.0.Final'
	implementation 'com.vladmihalcea:hibernate-types-60:2.16.2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.postgresql:postgresql'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'

	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'

	implementation 'io.github.openfeign:feign-okhttp:13.1'
	implementation 'io.github.openfeign:feign-core:13.1'
	implementation 'io.github.openfeign:feign-gson:13.1'
	implementation 'io.github.openfeign:feign-slf4j:13.1'
	implementation 'io.github.openfeign:feign-core:13.1'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.4'

	implementation 'org.springframework.kafka:spring-kafka'
	testImplementation 'org.springframework.kafka:spring-kafka-test'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	implementation 'org.testcontainers:junit-jupiter'
	implementation 'org.testcontainers:postgresql'
	implementation 'org.liquibase:liquibase-core'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'

}

tasks.named('test') {
	useJUnitPlatform()
}

//jacoco {
//	toolVersion = "0.8.7"
//}

test {
//	finalizedBy jacocoTestReport
}
